[Feature]: Enhanced predicate system (#1158)